# icon-gen-ai

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
docs/: index.html
examples/: ai_icon_search.py  ai_simple_usage.py  generate_ai_icons.py  generate_ai_icons_batch.py  generate_ai_icons_on_bg.py  generate_animated_icons.py
src/icon_gen/: __init__.py  __main__.py  cli.py  generator.py
src/icon_gen/ai/: __init__.py  anthropic_provider.py  assistant.py  base.py  openai_provider.py  prompts.py
tests/: test_ai.py  test_ai_assistant.py  test_ai_prompts.py  test_cli_advanced.py  test_generator.py  test_generator_advanced.py  test_main.py
